--- a/public/css/style_basic.css
+++ b/public/css/style_basic.css
@@ -8,6 +8,30 @@ body{
   font-family: 'Candara', 'Time New Romans';
 }
 
+#white_backgraund{
+  display: none;
+  z-index: 1001;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  position:fixed;
+  background-color: #ffffff;
+  width: 100%;
+  height: 100%;
+}
+#black_backgraund{
+  opacity: 0.9;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  position:fixed;
+  background-color:#000000	;
+  width: 100%;
+  height: 100%;
+}
+
 /*стиль верхньої частини сторінки (шапки)*/
 header{
   display: grid;
@@ -208,7 +232,7 @@ nav{
   z-index: 1002;
   display: none;
   position: absolute;
-  top: 13.5%;
+  top: 5%;
   left: 17.5%;
   width: 65%;
   height: auto;
